Fri Jul 31 22:23:41 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-zipper.rb, controller.rb, zipper.rb, n-zipper.rb: [SR#102] zip対応

Wed Jul 22 21:45:47 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* bjob.rb: Bjob#each_node がデッドロックしないようにした.

Wed Jul 22 17:59:53 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* sort19.rb: [SR#102] sort_by対応
	* n-group-by.rb: hash_optimizeオプションを受け付けられるようにした. 
	  hash_optimizeでも, Pool変数が使えるようにした.

Wed Jul 22 17:25:35 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-each-element-selector.rb: [SR#102] select対応

Wed Jul 22 17:19:02 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* controller.rb, b-input-varray.rb, n-input-varray.rb,
	  file-place.rb: [SR#102] input-varray 対応

Wed Jul 22 16:33:06 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* n-output-varray.rb: [SR#102] output-varray 対応
	* b-file-output.rb: ゴミ削除

Wed Jul 22 16:04:27 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* controller.rb, b-shuffle.rb, n-identity.rb: [SR#102] shuffle対応

Wed Jul 22 13:21:33 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-exec.rb, n-exec.rb, file-place.rb: [SR#102] exec対応

Wed Jul 15 20:45:11 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* b-local-file-output.rb, local-file-output.rb,
	  n-local-file-output.rb; [SR#102] local-file-output対応
	* bhere.rb, nhere.rb: 余分なコメントを削除


Wed Jul 15 19:19:51 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* controller.rb, b-local-file-input.rb, local-file-input.rb,
	  file-place.rb: [SR#102] local-file-input対応
	* bhere.rb: バグがあった

Wed Jul 15 16:55:35 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* controller.rb, bjob.rb, b-group-by.rb, file-place.rb:
	  BJob#next_filterを each_assigned_filterに変更したのにともなう, 対
	  応
	
Tue Jul 14 14:47:43 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* hash-simple-hash.rb: モジュール名変更
	
Mon Jul 13 14:36:03 2009  Keiju Ishitsuka  <keiju@giant>

	* sample/lifegame/*.rb: 文字コードをuft-8に変換
